[UNTESTED] fix some issue thingies uh idek